test/expected/explain_xxvi.out
explain constexpr volatile int x
        ^
9: error: constexpr volatile is illegal in C
